[workspace]
resolver = "2"
members = [
    "macroquest",
    "macroquest-build-config",
    "macroquest-macros",
    "examples/skeleton",
]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "MIT"

[workspace.dependencies]
macroquest = { version = "0.1", path = "./macroquest" }
macroquest-build-config = { version = "0.1", path = "./macroquest-build-config" }
macroquest-macros = { version = "0.1", path = "./macroquest-macros" }
