[workspace]
resolver = "2"
members = [
    "macroquest",
    "macroquest-sys",
    "macroquest-proc-macros",
    "macroquest-build-config",
    "examples/MQRustLowLevel",
    "examples/MQRustSimple",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/wmhm/macroquest-rs"
keywords = ["gamedev", "bindings", "codegen", "macroquest"]


[workspace.dependencies]
macroquest = { version = "0.1", path = "./macroquest" }
macroquest-sys = { version = "0.1", path = "./macroquest-sys" }
macroquest-proc-macros = { version = "0.1", path = "./macroquest-proc-macros" }
macroquest-build-config = { version = "0.1", path = "./macroquest-build-config" }


[profile.dev.build-override]
# Compile build scripts (which includes proc-macros) with optimizations enables
# to speed up build times in general.
opt-level = 3
