[package]
name = "macroquest-build-config"
description = "Build configuration for the MacroQuest ecosystem"
readme = "README.md"
categories = ["gaming", "development-tools::build-utils"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]


[build-dependencies]
libloading = "0.8"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc"]
