[package]
name = "macroquest-macros"
description = "Internal macros for the MacroQuest ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[build-dependencies]
macroquest-build-config = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc"]
