[package]
name = "macroquest-sys"
description = "Raw bindings to the MacroQuest API"
readme = "README.md"
categories = ["external-ffi-bindings", "games"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
cxx = "1"


[build-dependencies]
macroquest-build-config = { workspace = true }
cxx-build = "1"
walkdir = "2"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc"]
