[package]
name = "macroquest"
description = "Write MacroQuest plugins in Rust"
readme = "README.md"
categories = ["api-bindings", "gaming"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true


[dependencies]
macroquest-sys = { workspace = true, optional = true }
macroquest-proc-macros = { workspace = true }

cansi = "2.2.1"
memchr = "2"
num_enum = "0.7.2"
parking_lot = "0.12.1"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
ref-cast = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }
typed-builder = "0.18.1"
windows = { version = "0.*", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
] }


[dev-dependencies]
colored = "2"


[features]
default = ["bindings"]
bindings = ["dep:macroquest-sys"]
logger = ["dep:tracing-subscriber", "dep:tracing-appender"]


[package.metadata.docs.rs]
features = ["logger"]
no-default-features = true
targets = ["x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]
