[package]
name = "MQRustBasic"
description = "An example of a basic MacroQuest plugin"
readme = "README.md"
categories = ["gaming"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true


[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
macroquest = { workspace = true, features = ["logger"] }
