[package]
name = "MQRustLowLevel"
description = "An example of a MacroQuest plugin using the low level API"
readme = "README.md"
categories = ["gaming"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true


[lib]
crate-type = ["cdylib"]


[dependencies]
macroquest = { workspace = true, features = ["logger", "colors"] }


[build-dependencies]
macroquest-build-config = { workspace = true }
