[package]
name = "MQRustSimple"
description = "An example of a simple MacroQuest plugin"
readme = "README.md"
categories = ["gaming"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true


[lib]
crate-type = ["cdylib"]


[dependencies]
macroquest = { workspace = true, features = ["logger"] }


[build-dependencies]
macroquest-build-config = { workspace = true }
