[package]
name = "mqrustskeleton"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
macroquest = { path = "../../macroquest" }

[dependencies.windows]
version = "0.*"
features = ["Win32_Foundation", "Win32_System_SystemServices"]

[build-dependencies]
macroquest-build-config = { path = "../../macroquest-build-config" }
