[package]
name = "mqrustskeleton"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
macroquest = { workspace = true, features = ["logger", "colors"] }
log = "0.4"

[build-dependencies]
macroquest-build-config = { workspace = true }
