[package]
name = "mqrustskeleton"
description = "An example Skeleton of a MacroQuest plugin"
readme = "README.md"
categories = ["gaming"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true


[lib]
crate-type = ["cdylib"]


[dependencies]
macroquest = { workspace = true, features = ["logger", "colors"] }


[build-dependencies]
macroquest-build-config = { workspace = true }
